--- a/horeca.html
+++ b/horeca.html
@@ -1,15 +1,38 @@
-<!DOCTYPE html>
-<html lang="nl">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-		<link rel="stylesheet" type="text/css" href="horeca.css">
-	</head>
+<!doctype html>
 
-    <body>
-    	<title>Horeca</title>
-    		<div>
-		        <h1>Uw bestelling:</h1>
-		        <script src="horeca.js"></script>
-    		</div>
-    </body>
+<html lang="nl">
+<head>
+  <meta charset="utf-8">
+
+  <title>horeca app</title>
+   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <link rel="stylesheet" href="horeca.css">
+
+</head>
+
+<body>
+	<div>
+		<h1>Prijs drinken:</h1>
+		<p>fris: &euro;2.50.</p>
+		<p>wijn: &euro;5.50.</p>
+		<p>bier: &euro;3.50.</p>
+
+		<h1><br>Prijs snacks:</h1>
+		<p>Kleine schaal bitterballen (8): &euro;2.50.</p>
+		<p>Grote schaal bitterballen (16): &euro;4.50.</p>
+
+		<h1><br>Besteld drinken:</h1>
+		<p id="fris">fris: 0x, &euro;0.</p>
+		<p id="wijn">wijn: 0x, &euro;0.</p>
+		<p id="bier">bier: 0x, &euro;0.</p>
+
+		<h1><br>Bestelde snacks:</h1>
+		<p id="kleineschaal">kleine schalen: 0x, &euro;0.</p>
+		<p id="groteschaal">grote schalen: 0x, &euro;0.</p>
+
+		<p id="totaalprijs"><br><br><br>totaalprijs: &euro;0.</p>
+	</div>
+ 
+	<script src="horeca.js"></script>
+</body>
 </html>
